Fix header spacing

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ header, footer {
 
 header {
     display: flex;
+    justify-content: center;
+}
+
+.inner-header {
+    width: 70%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
@@ -32,7 +38,7 @@ ul {
     padding: 0;
     margin: 0;
     display: flex;
-    gap: 10px;
+    gap: 15px;
 }
 
 .header-links li {
